liste de départ

--- a/src/Controleur/Classement/.gitignore
+++ b/src/Controleur/Classement/.gitignore
@@ -2,3 +2,5 @@
 /ActionExporterClassement.class
 /ActionClasserCouleur.class
 /ActionExporterCouleur.class
+/ActionAfficherClassement.class
+/ActionAfficherCouleur.class
